dodano: oprogramowano endpoint do nauki pytań i odpowiedzi
