# config/swagger-api.yaml
@@ -11,6 +11,8 @@ tags:
     description: komendy ogólne związane z API
   - name: spambot
     description: komendy związane z obsługą ChatBota rozpoznającego tekst będący spamem
+  - name: questionbot
+    description: komendy związane z obsługą ChatBota odpowiadającego na pytania
 paths:
   /:
     get:
@@ -69,6 +71,41 @@ paths:
             example: { 'textData' : 'empty' }
       tags:
         - spambot
+  /learn/question:
+    post:
+      summary: "uczy bota odpowiedzi na nowy zestaw pytanie i odpowiedź"
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Nowe dane nauki do pytań i odpowiedzi"
+          required: true
+          schema:
+            $ref: "#/definitions/QuestionLearnData"
+      responses:
+        '200':
+          description: OK
+          schema:
+            example: {
+              'operation': 'success'
+            }
+        '400':
+          description: Brak wymaganego parametru
+          schema:
+            example: {
+              "message": {
+                "question": "Missing required parameter in the JSON body or the post body or the query string"
+              }
+            }
+        '422':
+          description: Parametr niewłaściwy
+          schema:
+            example: { 'question': 'too short, minimum 5 chars' }
+      tags:
+        - questionbot
 definitions:
   SpamLearnData:
     type: "object"
@@ -84,3 +121,14 @@ definitions:
           - "not-spam"
     xml:
       name: "SpamLearnData"
+  QuestionLearnData:
+    type: "object"
+    properties:
+      question:
+        type: "string"
+        description: "Pytanie do nauczenia na które zostanie podana odpowiedź, minimum 5 znaków."
+      answer:
+        type: "string"
+        description: "Odpowiedź na zadane pytanie, która zostanie nauczona, minimum 5 znaków."
+    xml:
+      name: "QuestionLearnData"
